--- a/.trivyignore
+++ b/.trivyignore
@@ -1,2 +1,3 @@
 # trivy ignore
 CVE-2025-22874 # stdlib crypto/x509: Usage of ExtKeyUsageAny disables policy validation in crypto/x509
+CVE-2025-48988 # org.apache.tomcat.embed:tomcat-embed-core: Allocation of Resources Without Limits or Throttling.  Fixed Version: 11.0.8, 10.1.42
